[tool.poetry]
name = "logprof"
version = "0.1.0"
description = "Simple logging profiler."
authors = ["Blair Azzopardi <blairuk@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bsdz/logprof"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.5.0"
isort = "^5.12.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
